--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "the-new-demo",
+  "name": "Sandbox",
   "version": "0.5.0",
   "description": "Demo site featuring typical Apostrophe features",
   "main": "app.js",
@@ -15,7 +15,6 @@
   "dependencies": {
     "apostrophe-blog-2": "0.5.x",
     "apostrophe-browserify": "0.5.x",
-    "apostrophe-demo-login": "0.5.x",
     "apostrophe-editor-2": "0.5.x",
     "apostrophe-events": "^0.5.18",
     "apostrophe-groups": "0.5.x",
